--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
     <title>Trials in Tainted Space Save Editor</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="https://kit.fontawesome.com/f5341e91eb.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/f5341e91eb.js"></script>
 
-    <script type="text/javascript" src="data/classes.js"></script>
-    <script type="text/javascript" src="data/codex.js"></script>
-    <script type="text/javascript" src="data/flags.js"></script>
-    <script type="text/javascript" src="data/global.js"></script>
-    <script type="text/javascript" src="data/perks.js"></script>
-    <script type="text/javascript" src="data/status.js"></script>
-    <script type="text/javascript" src="data/keyitems.js"></script>
-    <script type="text/javascript" src="data/vm.js"></script>
+    <script src="data/classes.js"></script>
+    <script src="data/codex.js"></script>
+    <script src="data/flags.js"></script>
+    <script src="data/global.js"></script>
+    <script src="data/perks.js"></script>
+    <script src="data/status.js"></script>
+    <script src="data/keyitems.js"></script>
+    <script src="data/vm.js"></script>
 
-    <script type="text/javascript" src="ui/display.js"></script>
-    <script type="text/javascript" src="ui/layout.js"></script>
-    <script type="text/javascript" src="ui/container.js"></script>
-    <script type="text/javascript" src="ui/input.js"></script>
+    <script src="ui/display.js"></script>
+    <script src="ui/layout.js"></script>
+    <script src="ui/container.js"></script>
+    <script src="ui/input.js"></script>
 
-    <script type="text/javascript" src="scripts/filesaver.js"></script>
-    <script type="text/javascript" src="scripts/ko.js"></script>
-    <script type="text/javascript" src="scripts/ko-mapping.js"></script>
-    <script type="text/javascript" src="scripts/ko-dict.js"></script>
-    <script type="text/javascript" src="scripts/util.js"></script>
+    <script src="scripts/filesaver.js"></script>
+    <script src="scripts/ko.js"></script>
+    <script src="scripts/ko-mapping.js"></script>
+    <script src="scripts/ko-dict.js"></script>
+    <script src="scripts/util.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="styles/bootstrap-mod.css" />
@@ -42,7 +42,7 @@
     <style>
     </style>
 
-    <script>
+    <script type="text/javascript">
 
         const fileExtension = '.json';
         const maxChangeLogs = 5;
