--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="scripts/ko.js"></script>
     <script src="scripts/ko-mapping.js"></script>
     <script src="scripts/ko-dict.js"></script>
+    <script src="scripts/typeahead.js"></script>
     <script src="scripts/util.js"></script>
 
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -377,6 +378,28 @@
 
             // #endregion
 
+
+            var a3d923eda_15e6_444d_9c52_06e050524a3d = ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
+                'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
+                'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
+                'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
+                'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
+                'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
+                'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
+                'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
+                'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
+            ];
+
+            $('.typeahead').typeahead({
+                hint: true,
+                highlight: true,
+                minLength: 1
+            },
+                {
+                    name: 'states',
+                    source: util.substringMatcher(a3d923eda_15e6_444d_9c52_06e050524a3d)
+                });
+
         });
 
 
@@ -493,7 +516,11 @@
                 <div class="tab-pane fade" id="tabPerks" role="tabpanel" aria-labelledby="navPerks"></div>
                 <div class="tab-pane fade" id="tabStatusEffects" role="tabpanel" aria-labelledby="navStatusEffects"></div>
                 <div class="tab-pane fade" id="tabFlags" role="tabpanel" aria-labelledby="navFlags"></div>
-                <div class="tab-pane fade" id="tabInventory" role="tabpanel" aria-labelledby="navInventory"></div>
+                <div class="tab-pane fade" id="tabInventory" role="tabpanel" aria-labelledby="navInventory">
+
+                    <input class="typeahead" type="text" placeholder="a3d923eda_15e6_444d_9c52_06e050524a3d">
+
+                </div>
                 <div class="tab-pane fade" id="tabKeyItems" role="tabpanel" aria-labelledby="navKeyItems"></div>
             </div>
         </div>
