--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                     if (!vm) {
                         koInit();
-                        vm = new ViewModel(json);
+                        vm = new ViewModel();
                         isFirstLoad = true;
                     }
 
