--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <title>Trials in Tainted Space Save Editor</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/f5341e91eb.js"></script>
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/popper.js"></script>
+    <script src="scripts/bootstrap.js"></script>
+    <script src="scripts/fontawesome.js"></script>
+    <script src="scripts/filesaver.js"></script>
+    <script src="scripts/ko.js"></script>
+    <script src="scripts/ko-mapping.js"></script>
+    <script src="scripts/ko-dict.js"></script>
+    <script src="scripts/typeahead.js"></script>
+    <script src="scripts/util.js"></script>
 
     <script src="data/classes.js"></script>
     <script src="data/codex.js"></script>
@@ -30,14 +36,7 @@
     <script src="ui/container.js"></script>
     <script src="ui/input.js"></script>
 
-    <script src="scripts/filesaver.js"></script>
-    <script src="scripts/ko.js"></script>
-    <script src="scripts/ko-mapping.js"></script>
-    <script src="scripts/ko-dict.js"></script>
-    <script src="scripts/typeahead.js"></script>
-    <script src="scripts/util.js"></script>
-
-    <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="styles/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="styles/bootstrap-mod.css" />
     <link type="text/css" rel="stylesheet" href="styles/main.css" />
 
